<resources>
    <string name="app_name">Transportation App For BCS614</string>
    <string name="sign_out">Sign Out</string>
    <string name="schedule_trip">Trip Scheduling</string>
    <string name="trip_records">Trip Records</string>
    <string name="user_profile">User Profile</string>
    <string name="new_trip">New Trip</string>
    <string name="train_schedules">Train Schedules</string>
    <string name="car_scheduling">Car Scheduling</string>
    <string name="title_activity_maps">Map</string>
    <string name="google">Google Maps</string>
    <string name="mapbox">MapBox</string>
    <string name="start_navigating">Start Navigating</string>
    <string name="schedule_info">Schedule Info</string>
    <string name="metro_line">Metro Line</string>
    <string name="bus_schedules">Bus Schedules</string>
    <string name="trip_schedules">Trip Schedules</string>
    <string name="navigate">Navigate</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="schedules">Schedules</string>
    <string name="trains">Trains</string>
    <string name="buses">Buses</string>
    <string name="book_bus_ticket">Book Bus Ticket</string>
    <string name="book_train_ticket">Book Train Ticket</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="ticket_booked_successfully">Ticket booked successfully! You can review it in Trip Records anytime.</string>
    <string name="check_now">CHECK NOW</string>
    <string name="missing_values">Please fill up valid details.</string>
    <string name="qrcode_not_supported">QR Code generation not supported on your device!</string>
    <string name="ticket_qrcode_uploaded">Ticket QR Code saved successfully.</string>
    <string name="ticket_details">QR Code Ticket Details</string>
    <string name="qrcode_ticket_info">Quickly verify your ticket details here</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="date_booked">Date Booked</string>
    <string name="trip_date">Trip Date</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="qrcode_image_description">This is your ticket\'s QR Code</string>
    <string name="trip_time">Trip Time</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="main_ticket_qrcode_image">Your ticket\'s QR code</string>
    <string name="ticket_qrcode">Ticket QR Code</string>
    <string name="your_profile_picture_description">Your profile picture</string>
    <string name="old_device_warning">Experimental feature warning: may not work on pre-2015 devices!</string>
    <string name="not_supported">Operation not supported on your device!</string>
    <string name="dp_uploaded">Profile picture uploaded. Please refresh the home page.</string>
    <string name="refresh">Refresh</string>
    <string name="your_name_new">your name</string>
    <string name="not_editable">you can\'t modify this field</string>
    <string name="your_email">your email</string>
    <string name="update_friends_group_code">update friends group code</string>
    <string name="update_gender">male, female, or others?</string>
    <string name="update_favorite_city">what\'s your favorite city?</string>
    <string name="profile_updated">Profile updated!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="group_code">Group Code</string>
    <string name="favorite_city">Favorite City</string>
    <string name="gender">Gender</string>
    <string name="share_trip">Share Trip</string>
    <string name="friends">Friends</string>
    <string name="notifications">Notifications</string>
    <string name="trip_sharing_detected">A trip will now be shared with the selected friend</string>
    <string name="trip_sharing_not_detected">No trips being shared</string>
    <string name="notify_new_shared_ticket">will be notified.</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="shared_ticket_id">Shared Ticket ID</string>
    <string name="sent_from">Sent From</string>
    <string name="date_sent">Date Shared</string>
    <string name="shared_by">Shared By</string>
    <string name="submit">Submit</string>
    <string name="share_your_experience">Share your experience with us</string>
    <string name="lets_hear_from_you">Let\'s Hear From You!</string>
    <string name="feedback_too_short">Feedback too short!</string>
    <string name="feedback_submitted">Feedback submitted!</string>
    <string name="reviewing_feedback">We\'ve received your feedback. It\'s currently being reviewed.</string>
</resources>
