<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/tripRecordsConstraintLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".records.TripRecordsActivity">



    <LinearLayout
        android:id="@+id/tripRecordsLinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimens"
        android:layout_margin="@dimen/dimens"
        app:layout_constraintBottom_toTopOf="@+id/tripRecordsRecyclerView"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/qrCodeDetailsTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ticket_details"
            app:hintTextColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            android:background="@color/design_default_color_background"
            app:helperText="@string/qrcode_ticket_info"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/colorAccent"
            app:endIconMode="clear_text"
            android:layout_marginBottom="@dimen/dimens"
            android:layout_marginTop="@dimen/dimens">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/qrCodeTicketTInputEText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="140dp"
                android:layout_weight="1"
                android:height="50dp"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/quantum_black_100"
                android:inputType="textMultiLine|textImeMultiLine"
                android:gravity="center_vertical|center_horizontal"
                android:editable="false"
                android:enabled="false"
                android:lines="2"
                tools:ignore="Deprecated">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tripRecordsRecyclerView"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="60dp"
        android:outlineSpotShadowColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tripRecordsLinLayout">

    </androidx.recyclerview.widget.RecyclerView>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/scanQrCodeButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/quantum_white_100"
        app:icon="@drawable/ic_qr_scan"
        android:text="@string/scan_qr_code"
        android:name="androidx.navigation.fragment.NavHostFragment"
        style="?attr/materialButtonOutlinedStyle"/>


</androidx.constraintlayout.widget.ConstraintLayout>