<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/qrCodeImageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center" />

                <Button
                    android:id="@+id/datecalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="#161b28"
                    android:gravity="center"
                    android:text="@string/set_date"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/timecalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="#161b28"
                    android:gravity="center"
                    android:text="@string/set_time"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <fragment
                            android:id="@+id/origin"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <fragment
                            android:id="@+id/destination"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="@dimen/spacing"

            android:id="@+id/rowOneTickets">

            <Button
                android:id="@+id/bookticket"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:lines="2"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:text="@string/book_bus_ticket"
                android:textSize="12sp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/booktrainticket"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:lines="2"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:text="@string/book_train_ticket"
                android:textSize="12sp"
                android:layout_weight="1"/>

        </LinearLayout>




        </LinearLayout>
    </androidx.cardview.widget.CardView>







    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity" />


    </androidx.constraintlayout.widget.ConstraintLayout>